--- a/Printf/Makefile
+++ b/Printf/Makefile
@@ -11,7 +11,7 @@
 # **************************************************************************** #
 
 #FLAGS = -Wall -Wextra -Werror
-NAME = 1.ft_make_number_with_main.c
+NAME = ft_floats.c
 #NAME_C = main.c
 NAME_O = $(NAME:.c=.o)
 #RM = /bin/rm -f
@@ -24,10 +24,11 @@ all:
 #	gcc -g $(NAME) write_fgr.c -o main.1  -L. libft.a
 
 #	gcc -g $(NAME) -o ft_printf -L. libft/libftprintf.a
-	gcc -g 1.ft_make_number_with_main.c -L. libft/libft.a ft_make_zero_str.c \
+	gcc -g ft_floats.c -L. libft/libft.a ft_make_zero_str.c \
 	ft_addition_long_arithmetic.c ft_difference_long_arithmetic.c \
-    ft_division_long_arithmetic.c ft_exponentiation_long_arithmetic.c \
-    ft_division_long_arithmetic_2.c
+    ft_division_long_arithmetic.c  ft_division_long_arithmetic_2.c \
+    ft_exp_long_arithmetic.c ft_floats_2.c ft_floats_3.c \
+    ft_floats_4.c
 clean:
 	$(RM) $(NAME_O)
 
