--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -31,7 +31,7 @@ ft_f.c ft_floats_2.c ft_floats_3.c ft_floats_4.c ft_floats_5.c \
 ft_floats.c ft_help_s.c ft_help_s2.c ft_make_zero_str.c \
 ft_null_s.c ft_null.c ft_o.c ft_p.c ft_percent.c ft_printf.c \
 ft_remember.c ft_s.c ft_take_digit.c ft_u.c ft_widht_d.c \
-ft_write_and_clean.c ft_x.c
+ft_write_and_clean.c ft_x.c ft_Lf.c
 
 OBJS = $(addprefix $(DIR_O)/,$(SOURCES:.c=.o))
 
