--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: bglover <bglover@student.42.fr>            +#+  +:+       +#+         #
+#    By: vaisha <vaisha@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/10/27 21:47:45 by msabre            #+#    #+#              #
-#    Updated: 2019/11/06 18:19:16 by bglover          ###   ########.fr        #
+#    Updated: 2019/12/17 17:39:52 by vaisha           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -31,7 +31,7 @@ ft_f.c ft_floats_2.c ft_floats_3.c ft_floats_4.c ft_floats_5.c \
 ft_floats.c ft_help_s.c ft_help_s2.c ft_make_zero_str.c \
 ft_null_s.c ft_null.c ft_o.c ft_p.c ft_percent.c ft_printf.c \
 ft_remember.c ft_s.c ft_take_digit.c ft_u.c ft_widht_d.c \
-ft_write_and_clean.c ft_x.c ft_Lf.c
+ft_write_and_clean.c ft_x.c ft_Lf.c ft_width_f.c
 
 OBJS = $(addprefix $(DIR_O)/,$(SOURCES:.c=.o))
 
