--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: vaisha <vaisha@student.42.fr>              +#+  +:+       +#+         #
+#    By: umoff <umoff@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/10/27 21:47:45 by msabre            #+#    #+#              #
-#    Updated: 2019/12/21 22:05:38 by vaisha           ###   ########.fr        #
+#    Updated: 2019/12/22 00:30:07 by umoff            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
