--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -5,8 +5,8 @@
 #                                                     +:+ +:+         +:+      #
 #    By: umoff <umoff@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2019/10/27 21:47:45 by msabre            #+#    #+#              #
-#    Updated: 2019/12/24 15:38:50 by umoff            ###   ########.fr        #
+#    Created: 2019/12/24 18:27:37 by umoff             #+#    #+#              #
+#    Updated: 2019/12/24 18:27:38 by umoff            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
