--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: umoff <umoff@student.42.fr>                +#+  +:+       +#+         #
+#    By: vaisha <vaisha@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/12/24 18:27:37 by umoff             #+#    #+#              #
-#    Updated: 2019/12/24 18:27:38 by umoff            ###   ########.fr        #
+#    Updated: 2019/12/26 15:49:55 by vaisha           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,9 +26,9 @@ HEADER = includes/ft_printf.h
 
 SOURCES = ft_floats.c ft_difference_long_arithmetic.c ft_exp_long_arithmetic.c \
 		  ft_division_long_arithmetic.c ft_addition_long_arithmetic.c ft_print.c \
-		  ft_make_man.c ft_try.c auxiliary.c dec.c ft_printf.c mutual_exclusion.c \
-		  output.c parser.c simple.c unsigned.c x.c x_add.c ft_print_nan_inf.c \
-		  ft_print_help.c
+		  ft_make_man.c ft_try.c ft_auxiliary.c ft_dec.c ft_printf.c \
+		  ft_mutual_exclusion.c ft_output.c ft_parser.c ft_simple.c ft_unsigned.c \
+		  ft_x.c ft_x_add.c ft_print_nan_inf.c ft_print_help.c
 
 OBJS = $(addprefix $(DIR_O)/,$(SOURCES:.c=.o))
 
